--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ jobs:
     env:
     - CC=gcc-11
     - CXX=g++-11
-    - CFLAGS_EXTRA="-O3"
+    - CFLAGS_EXTRA="-O3 -D SIMULATE_LOST_SIGNALS"
     - CONF_OPTIONS="--enable-cplusplus --disable-gcj-support"
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
