Allow to unmap memory block right in GC cycle where block is freed
This commit changes how GC_unmap_threshold is interpreted:
GC_unmap_threshold==N now means block is returned to OS if the block
is freed N-1 collections ago (previously was: N collections ago).

* allchblk.c [USE_MUNMAP && !MUNMAP_THRESHOLD] (MUNMAP_THRESHOLD):
Change value from 6 to 7.
* configure.ac [$enable_munmap!=no && ($MUNMAP_THRESHOLD=""
|| $MUNMAP_THRESHOLD=yes)] (MUNMAP_THRESHOLD): Likewise.
* allchblk.c [USE_MUNMAP] (GC_unmap_old): Go on with unmapping also if
GC_gc_no==hb_last_reclaimed+GC_unmap_threshold; update comment.
* configure.ac (munmap): Update help string (including change of the
default value from 6 to 7).
* configure.ac [$enable_munmap!=no] (MUNMAP_THRESHOLD): Likewise.
* doc/README.environment (GC_UNMAP_THRESHOLD): Update documentation.
* doc/README.macros (MUNMAP_THRESHOLD): Likewise.
* include/private/gcconfig.h [USE_MUNMAP && !MUNMAP_THRESHOLD
&& (SN_TARGET_PS3 || SN_TARGET_PSP2 || MSWIN_XBOX1)]
(MUNMAP_THRESHOLD): Change value from 2 to 3.

--- a/configure.ac
+++ b/configure.ac
@@ -922,8 +922,8 @@ AC_ARG_ENABLE(mmap,
 
 AC_ARG_ENABLE(munmap,
     [AS_HELP_STRING([--enable-munmap=N],
-                    [return page to the OS if empty for N collections
-                     (default: 6)])],
+                    [return page to the OS if page is marked as
+                     empty during N collections (default: 7)])],
     MUNMAP_THRESHOLD=$enableval)
 if test x$enable_munmap != xno; then
     AC_DEFINE([USE_MMAP], 1,
@@ -935,10 +935,11 @@ if test x$enable_munmap != xno; then
               [Define to return memory to OS with munmap calls
                (see doc/README.macros).])
     if test x$MUNMAP_THRESHOLD = x -o x$MUNMAP_THRESHOLD = xyes; then
-      MUNMAP_THRESHOLD=6
+      MUNMAP_THRESHOLD=7
     fi
     AC_DEFINE_UNQUOTED([MUNMAP_THRESHOLD], [${MUNMAP_THRESHOLD}],
-        [Number of GC cycles to wait before unmapping an unused block.])
+        [Number of sequential garbage collections during those a candidate
+         block for unmapping should be marked as free.])
 else
     if test "${gc_use_mmap}" = "yes"; then
       AC_DEFINE([USE_MMAP], 1,
