Travis CI: Pass '-D GC_NO_FINALIZATION' in CFLAGS_EXTRA (fix of commit 655c1486b)

--- a/.travis.yml
+++ b/.travis.yml
@@ -368,8 +368,9 @@ jobs:
         - libatomic-ops-dev
     compiler: gcc
     env:
-    - CONF_CFLAGS="-D AO_USE_PTHREAD_DEFS -D GC_NO_FINALIZATION"
+    - CONF_CFLAGS="-D AO_USE_PTHREAD_DEFS"
     - CONF_OPTIONS="--with-libatomic-ops=yes --enable-cplusplus"
+    - CFLAGS_EXTRA="-D GC_NO_FINALIZATION"
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
       apt:
