Fix pthread_setname_np and dladdr detection by CMake (fix of commits 3a8028ff2, ecd488e02)
check_c_source_compiles() compiles and links the provided code snippet
(contrary to AC_COMPILE_IFELSE() in configure); the linking of the
checked code is now suppressed by adding "-c" to CMAKE_REQUIRED_FLAGS.

* CMakeLists.txt (CMAKE_REQUIRED_FLAGS): Set to "-c"; add comment.
* CMakeLists.txt [!BORLAND && !MSVC && !WATCOM && HAVE_FLAG_WERROR]
(CMAKE_REQUIRED_FLAGS): Append "-Werror" instead of overwriting the
value.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -380,12 +380,16 @@ if (MSVC)
   set(SRC ${SRC} extra/msvc_dbg.c)
 endif()
 
+# Instruct check_c_source_compiles to skip linking.
+# Alternatively, we could set CMAKE_REQUIRED_LIBRARIES properly.
+SET(CMAKE_REQUIRED_FLAGS "-c")
+
 # Instruct check_c_source_compiles and similar CMake checks not to ignore
 # compiler warnings (like "implicit declaration of function").
 if (NOT BORLAND AND NOT MSVC AND NOT WATCOM)
   check_c_compiler_flag(-Werror HAVE_FLAG_WERROR)
   if (HAVE_FLAG_WERROR)
-    SET(CMAKE_REQUIRED_FLAGS "-Werror")
+    SET(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS} -Werror")
   endif(HAVE_FLAG_WERROR)
 endif()
 
