--- a/ci/tests/CMakeLists.txt
+++ b/ci/tests/CMakeLists.txt
@@ -10,13 +10,19 @@ add_executable(random_mixed_alloc.elf random_mixed_alloc.c)
 add_executable(small_fixed_alloc.elf small_fixed_alloc.c)
 add_executable(binary_tree.elf binary_tree.c)
 add_executable(smash_test.elf smash.c)
+add_executable(huge.elf huge.c)
+add_executable(leak.elf leak.c)
 target_link_libraries(random_mixed_alloc.elf libpthread.so ${CMAKE_INSTALL_PREFIX}/lib/libgc.so)
 target_link_libraries(small_fixed_alloc.elf libpthread.so ${CMAKE_INSTALL_PREFIX}/lib/libgc.so)
 target_link_libraries(binary_tree.elf libm.so libpthread.so ${CMAKE_INSTALL_PREFIX}/lib/libgc.so)
+target_link_libraries(huge.elf libpthread.so ${CMAKE_INSTALL_PREFIX}/lib/libgc.so)
 target_link_libraries(smash_test.elf libpthread.so ${CMAKE_INSTALL_PREFIX}/lib/libgc.so)
+target_link_libraries(leak.elf libpthread.so ${CMAKE_INSTALL_PREFIX}/lib/libgc.so)
 
 install(TARGETS random_mixed_alloc.elf
                 small_fixed_alloc.elf
                 binary_tree.elf
+                huge.elf
                 smash_test.elf
+                leak.elf
                 RUNTIME DESTINATION bin)
