AppVeyor CI: Fix usage of -std=c11 option (fix of commit 11368eb15)
Command-line option -std=c11 is not valid for C++.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -54,11 +54,11 @@ environment:
     CONF_OPTIONS: --enable-cplusplus
     CFLAGS_EXTRA: -D GCTEST_PRINT_VERBOSE
   - TARGET: cygwin64
-    CFLAGS_EXTRA: -std=c11 -D GC_ALWAYS_MULTITHREADED -D LINT2 -D TEST_MANUAL_VDB
+    CFLAGS_EXTRA: -D GC_ALWAYS_MULTITHREADED -D LINT2 -D TEST_MANUAL_VDB
     CONF_OPTIONS: --enable-cplusplus --enable-gc-assertions --disable-shared
   - TARGET: cygwin64
     CONF_OPTIONS: --disable-threads
-    CFLAGS_EXTRA: -D USE_WINALLOC
+    CFLAGS_EXTRA: -std=c11 -D USE_WINALLOC
   - TARGET: mingw
   - TARGET: mingw
     CFLAGS_EXTRA: -D GC_THREADS -D THREAD_LOCAL_ALLOC -D PARALLEL_MARK -D GC_ASSERTIONS -D EMPTY_GETENV_RESULTS -D GC_GCJ_SUPPORT -D USE_MUNMAP -D LARGE_CONFIG -D NO_MSGBOX_ON_ERROR
